fix: ensure cursor is visible in dark mode on easyMDE editor
also improve text selection colour in dark mode

--- a/milk2meat/assets/css/editor.css
+++ b/milk2meat/assets/css/editor.css
@@ -23,4 +23,17 @@
   color: oklch(var(--bc));
 }
 
+/* Make cursor visible in dark mode */
+[data-theme="night"] .CodeMirror-cursor {
+  border-left-color: oklch(var(--bc));
+}
+
+/* text selection in dark mode */
+[data-theme="night"]
+  .EasyMDEContainer
+  .CodeMirror-focused
+  .CodeMirror-selected {
+  background: oklch(var(--n));
+}
+
 /* stylelint-enable selector-class-pattern */
